[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/MainScene.gd" type="Script" id=1]
[ext_resource path="res://GGRS.gdns" type="Script" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="GodotGGRS" type="Node" parent="."]
script = ExtResource( 2 )

[node name="P1" parent="." instance=ExtResource( 3 )]
position = Vector2( 377, 465 )

[node name="P2" parent="." instance=ExtResource( 3 )]
position = Vector2( 688, 468 )

[node name="Host" type="Button" parent="."]
margin_left = 266.0
margin_top = 161.0
margin_right = 434.0
margin_bottom = 201.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="."]
margin_left = 581.0
margin_top = 161.0
margin_right = 749.0
margin_bottom = 201.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Waiting" type="Label" parent="."]
visible = false
margin_left = 436.0
margin_top = 116.0
margin_right = 592.0
margin_bottom = 130.0
text = "Waiting for connection..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NetStats" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Host" to="." method="start_game" binds= [ true ]]
[connection signal="button_down" from="Join" to="." method="start_game" binds= [ false ]]
